WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105757
[BlackBerry] Caret doesn't update position when scrolling text in Input element
https://bugs.webkit.org/show_bug.cgi?id=105757
Summary
[BlackBerry] Caret doesn't update position when scrolling text in Input element
Sean Wang
Reported
2012-12-26 00:39:16 PST
When scrolling text in a input element, the text position is updated, but the caret is still at the origin position. HOW TO REPRODUCE: 1. Input a long text in the input element to make the text exceed the input visible length. 2. Tap on the text to trigger the caret. 3. Touch Scroll on the text Expects: The Text and the caret should be scrolled synchronously. Actual: The text position is scrolled, the caret is still at the origin position.
Attachments
patch
(2.47 KB, patch)
2012-12-26 08:25 PST
,
Sean Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2012-12-26 08:25:14 PST
Created
attachment 180750
[details]
patch Call FrameSelection::updateAppearence() instead of SelectionHandler::selectionPositionChanged(). The updateAppearence will call selectionPositionChanged at last.
WebKit Review Bot
Comment 2
2012-12-26 09:01:45 PST
Comment on
attachment 180750
[details]
patch Clearing flags on attachment: 180750 Committed
r138478
: <
http://trac.webkit.org/changeset/138478
>
WebKit Review Bot
Comment 3
2012-12-26 09:01:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug