[BlackBerry] Caret doesn't update position when scrolling text in Input element https://bugs.webkit.org/show_bug.cgi?id=105757

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2012-12-26
Reviewed by George Staikos.

PR 271627
Internally reviewed by George Staikos.

Call FrameSelection's updateAppearence instead of SelectionHandler's
selectionPositionChanged to update the caret position.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::setLayerScrollPosition):

Canonical link: https://commits.webkit.org/123962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138478 268f45cc-cd09-0410-ab3c-d52691b4dbfc